# auction-tracker

./: .gitignore  pyproject.toml
auction_tracker/: __init__.py  cli.py  dashboard.py  database.py  models.py
auction_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
auction_tracker/scraper/: __init__.py  base.py  grenadier.py  holmwood.py
docs/superpowers/plans/: 2026-05-30-christchurch-auction-tracker.md
docs/superpowers/specs/: 2026-05-30-christchurch-auction-tracker-design.md
tests/: test_database.py  test_integration.py  test_models.py  test_parsing.py
tests/fixtures/: grenadier_sample.html  holmwood_sample.html  holmwood_sample.json
