[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auction-tracker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "click>=8.1",
    "pandas>=2.2",
    "playwright>=1.40",
    "pydantic>=2.5",
    "streamlit>=1.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
auction-tracker = "auction_tracker.cli:main"
